# hvar-portal

./: .gitignore  NewTicketForm.tsx  README.md  checkout-demo.html  checkout-server.js  hvar-design-system.html  stage-and-commit.html
.venom/: CLAUDE-CODE-EAT.md  CONTEXT.md  DESIGN_DIRECTIONS.md  DESIGN_SYSTEM.md  MEMORY.md  corrections.yaml
compass/: README.md
compass/assets/: image-audit.md
compass/brand/: 00_brand-nucleus.md  01_visual-direction.md  02_tone-voice.md  03_personality.md  04_facebook-intelligence.md  05_market-intelligence.md
compass/portal/: architecture.md  design-system.md  service-portal.md  ux-patterns.md
compass/print/: leaflets.md
compass/products/: catalog.md  erp.md  hvar_erp.schema.sql  mcrm.md  pos.md
compass/social/: facebook.md  instagram.md  tiktok.md
hvarstore/: .env.example  .gitignore  Caddyfile  docker-compose.yml  package.json
hvarstore/api/: Dockerfile  package.json  tsconfig.json
hvarstore/api/src/: env.ts  index.ts
hvarstore/migrations/: drizzle.config.ts  package.json  seed-erp.ts  tsconfig.json
hvarstore/migrations/drizzle/: 0000_careless_the_professor.sql  0001_thankful_sleepwalker.sql
hvarstore/shared/: package.json  tsconfig.json
hvarstore/web/: Dockerfile  astro.config.mjs  package.json  tsconfig.json
hvarstore/web/src/: env.d.ts
scripts/: scrape_hvarstore.py  scrape_hvarstore_final.py  scrape_hvarstore_v2.py
workspace/docs/: README.md
workspace/examples/: hvarstore-frontend-vision.html
workspace/examples/MCRM/mcp-servers/mcrm-mcp/: README.md  mcrm-organism.html  pyproject.toml  server.py
(+1071 files in other folders)
