[project]
name = "mcrm-mcp"
version = "1.0.0"
description = "MCP server for HUB-MCRM — exposes every API endpoint as an individual tool"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.9.0",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
]

[project.scripts]
mcrm-mcp = "server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
